--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 </head>
 <body bgcolor="grey">
 <center>
-<img src="img/head.png"><br>
-<img src="img/1.png"><br>
-<img src="img/2.png"><br>
-<img src="img/14.png"><br>
-<img src="img/3.png"><br>
-<img src="img/4.png"><br>
-<img src="img/5.png"><br>
-<img src="img/6.png"><br>
-<img src="img/7.png"><br>
-<img src="img/8.png"><br>
-<img src="img/9.png"><br>
-<img src="img/10.png"><br>
-<img src="img/11.png"><br>
-<img src="img/12.png"><br>
-<img src="img/13.png"><br>
-<img src="img/15.png"><br>
-<img src="img/16.png"><br>
-<img src="img/17.png"><br>
-<img src="img/18.png"><br>
-<img src="img/foot.png"><br>
+<img src="head.png"><br>
+<img src="1.png"><br>
+<img src="2.png"><br>
+<img src="14.png"><br>
+<img src="3.png"><br>
+<img src="4.png"><br>
+<img src="5.png"><br>
+<img src="6.png"><br>
+<img src="7.png"><br>
+<img src="8.png"><br>
+<img src="9.png"><br>
+<img src="10.png"><br>
+<img src="11.png"><br>
+<img src="12.png"><br>
+<img src="13.png"><br>
+<img src="15.png"><br>
+<img src="16.png"><br>
+<img src="17.png"><br>
+<img src="18.png"><br>
+<img src="foot.png"><br>
 
 
 </center></body></html>
